<resources>
    <string name="app_name">Dev App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_icon">Search</string>
    <string name="select_title">Select Feature Articles</string>
    <string name="article_label">Article Read</string>
    <string name="duck_article_title">An article about Ducks</string>
    <string name="duck_article_content">Ducks are small, feathered birds that like to live on the surface of ponds and lakes. They enjoy swimming and eating bread, however it is better to feed them seed as bread can be bad for their health. There are many varieties of ducks but the most common is the Mallard.</string>
    <string name="geese_article_title">An article about Geese</string>
    <string name="geese_article_content">Geese are scary creatures that tend to chase you with little to no provocation but are generally quite popular in France as guards for dangerous or important areas. Always approach with caution as these feathered beasts are temperamental but will generally try and look cute.</string>
    <string name="approve_button_article">Approve</string>
    <string name="article_slider_button">Article Slider</string>
    <string name="title_activity_article_slider">Article Slider</string>
    <string name="title_activity_new_art">New Articles</string>
    <string name="title_activity_new_art_read">New Article</string>
    <string name="drawer_open">Open Nav</string>
    <string name="drawer_close">Nav Close</string>
    <string name="approval">You approve of this article!</string>
    <string name="title_activity_notes">Notes</string>
    <string name="notes">Make a Note!</string>
    <string name="current_note_hint">Current Note</string>
    <string name="no_note">No current note.</string>
    <string name="submit_notes">Submit</string>
    <string name="notes_menu">Notes</string>
    <string name="title_activity_free_press">Free Press</string>
    <string name="free_press_title">Add Free Press</string>
    <string name="title_free_add">Title</string>
    <string name="content_free">Content</string>
    <string name="submit_free_press">Submit Free Press</string>
    <string name="free_press_button">Free Press</string>
    <string name="title_activity_free_view">Free Press Viewer</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="free_icon">Free Press</string>
    <string name="duck_fragment_title">An Article about Ducks</string>
    <string name="title_activity_user_login">User Login</string>
    <string name="home_screen_title">Home</string>
    <string name="login_title">Login to Service</string>
    <string name="register_action">Register</string>
    <string name="delete_action">Delete User</string>
    <string name="username_label">Username</string>
    <string name="password">Password</string>
    <string name="login_button_label">Login to News</string>
    <string name="title_activity_user_register">User Register</string>
    <string name="register_title">Register a User</string>
    <string name="pick_name_label">Pick a Username</string>
    <string name="pass_register_label">Choose a Password</string>
    <string name="register_button_label">Register User</string>
    <string name="title_activity_delete_user">Delete User</string>
    <string name="delete_label">Input Username to Delete</string>
    <string name="delete_max_button">DELETE USER</string>
    <string name="title_activity_verify_functionality">Verify Functionality</string>
    <string name="verify_function_text">Click the buttons below to verify app functionality</string>
    <string name="home_verify_app_button">Verify App</string>
    <string name="verify_duck_art">Verify Duck Article</string>
    <string name="verify_geese_art">Verify Geese Article</string>
    <string name="verify_art_slider">Verify Article Slider</string>
    <string name="new_articles_verify">Verify New Articles</string>
    <string name="verify_free_press">Verify Free Press</string>
    <string name="login_default">gareth</string>
    <string name="verify_connection">Verify Connection</string>
    <string name="title_activity_net_tester">Net Tester</string>
    <string name="net_ver_test">Network Verification Test</string>
    <string name="net_test_content_desc">An image to verify your network is connected.</string>
    <string name="ver_conn_button">Verify Connectivity</string>
    <string name="article_image_desc">An image displaying the article subject.</string>
    <string name="title_activity_news_pub">News Publishers</string>
    <string name="refresh_menu_string">Refresh List</string>
    <string name="title_activity_pub_info">Publisher Info</string>
    <string name="contact_us_button">Contact Us!</string>
</resources>
