<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginTitle"
        android:text="@string/login_title"
        android:textSize="38sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginTitle"
        android:id="@+id/usernameLabel"
        android:text="@string/username_label"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/usernameLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/login_default" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:id="@+id/passLabel"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_below="@id/passLabel"
        android:text="test"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:text="@string/login_button_label"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:onClick="userLogin"/>
</RelativeLayout>
