<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/notes_hint"
        android:text="@string/notes"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notes_hint"
        android:id="@+id/entry">
        <EditText
            android:id="@+id/notes_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submit_notes"
            android:onClick="changeNote"/>
    </LinearLayout>
    <TextView android:id="@+id/notes_view"
        android:text="@string/current_note_hint"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/entry"
        android:paddingTop="20dp"/>

    <TextView android:id="@+id/notes_view_space"
        android:text="@string/no_note"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/notes_view"
        android:textColor="#111" />
</RelativeLayout>
