<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mycompany.devapp.UserRegister">

    <TextView android:text="@string/register_title"
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"/>

    <TextView android:text="@string/pick_name_label"
        android:id="@+id/pick_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_title"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="175dp"
        android:id="@+id/username"
        android:layout_height="wrap_content"
        android:layout_below="@id/pick_name_label"
        android:layout_marginTop="5dp"/>

    <TextView android:text="@string/pass_register_label"
        android:id="@+id/pick_pass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="175dp"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:layout_below="@id/pick_pass_label"
        android:layout_marginTop="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/password"
        android:text="@string/register_button_label"
        android:layout_marginTop="20dp"
        android:onClick="registerUser"/>
</RelativeLayout>
