<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/duck_article_title"
        android:textSize="32sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:paddingTop="10sp"
        android:text="@string/duck_article_content"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@id/title"
        android:background="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/approve"
        android:layout_below="@+id/content"
        android:layout_centerHorizontal="true"
        android:text="@string/approve_button_article"
        android:onClick="approve"/>
</RelativeLayout>